Test Unitarios (primera version)

--- a/project.yml
+++ b/project.yml
@@ -1,5 +1,4 @@
 ---
-
 # Notes:
 # Sample project C code is not presently written to produce a release artifact.
 # As such, release build options are disabled.
@@ -35,6 +34,7 @@
     - -:test/support
   :source:
     - src/**
+  :include:
     - inc/**
   :support:
     - test/support
@@ -72,9 +72,11 @@
 :gcov:
   :reports:
     - HtmlDetailed
+    - Cobertura
   :gcovr:
     :html_medium_threshold: 75
     :html_high_threshold: 90
+    :uncovered_ignore_list: [src/main.c]
 
 #:tools:
 # Ceedling defaults to using gcc for compiling, linking, etc.
@@ -99,4 +101,5 @@
   :enabled:
     - stdout_pretty_tests_report
     - module_generator
-...
+    - gcov
+    - junit_tests_report...
